2010-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Remove ThreadModel.cs from build
	* ThreadModel.cs: Remove. There's already a copy in Gendarme's 
	framework
	* ThreadRocks.cs: Add using Gendarme.Framework so it can
	access ThreadModelAttribute

2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* DecorateThreadsRule.cs:
	* DontUseLockedRegionOutsideMethodRule.cs:
	* ProtectCallToEventDelegatesRule.cs:
	* ThreadRocks.cs:
 		Apply AvoidUnnecessarySpecializationRule

2010-05-23  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewLockUsedOnlyForOperationsOnVariablesRule.cs: Fix last unit
	test failure when compiled with VS2008 where CSC added some NOP
	instructions.

2010-05-08  Sebastien Pouliot  <sebastien@ximian.com>

	* DecorateThreadsRule.cs: Replace internal type MethodName (which
	did not compile with CSC) and it's data by a simpler method.

2010-04-29  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotLockOnWeakIdentityObjectsRule.cs: Apply AvoidRepetitiveCallsTo
	PropertiesRule to TypeReference::get_FullName
	* DecorateThreadsRule.cs: Apply AvoidRepetitiveCallsToPropertiesRule
	on MemberReference::get_DeclaringType (11) and TypeReference::get_Name
	(6)

2010-04-22  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewLockUsedOnlyForOperationsOnVariablesRule.cs: Handle case
	when a try handler correspond to the first instruction of a 
	method

2010-04-18  Sebastien Pouliot  <sebastien@ximian.com>

	* ReviewLockUsedOnlyForOperationsOnVariablesRule.cs: Fix rule to
	handle 4.0 Monitor.Enter(object, ref bool) as generated by CSC10
	while retaining compatibility with previous/existing compilers.

2010-04-17  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoubleCheckLockingRule.cs: Ignore calls to Monitor.Enter(object,
	ref bool), introduced in FX4.0, since this rule is applied only
	to code compiled with a runtime earlier than 2.0

2010-04-17  Sebastien Pouliot  <sebastien@ximian.com>
